# static_vector

./: CMakeLists.txt  README.md  static_vector.cpp  static_vector.hpp
tests/: CMakeLists.txt  constructor.cpp  read_write.cpp  run_tests.py  runtest.bash  tests.txt
